Fixed info content height jumping

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -294,6 +294,7 @@ body {
                 font-weight: 400;
                 color: #FFFFFF;
                 line-height: 25px;
+                height: 175px;
                 margin-bottom: 1.5rem;
 
 
